--- a/BLAZAMGui/Navs/NavMenu.razor
+++ b/BLAZAMGui/Navs/NavMenu.razor
@@ -54,8 +54,13 @@
             <MudNavLink OnClick="@(()=>{Nav.NavigateTo("/permissions");})">@AppLocalization["Permissions"]</MudNavLink>
             <MudNavLink OnClick="@(()=>{Nav.NavigateTo("/fields");})">@AppLocalization["Fields"]</MudNavLink>
             <MudNavLink OnClick="@(()=>{Nav.NavigateTo("/templates");})">@AppLocalization["Templates"]</MudNavLink>
-            <MudNavLink OnClick="@(()=>{Nav.NavigateTo("/audit");})">@AppLocalization["Audit"]</MudNavLink>
         </MudNavGroup>
+        <MudNavLink OnClick="@(()=>{Nav.NavigateTo("/audit");})"
+                    Match=Microsoft.AspNetCore.Components.Routing.NavLinkMatch.Prefix
+                    Icon="@Icons.Material.Filled.ReceiptLong">
+            @AppLocalization["Audit"]
+
+        </MudNavLink>
     </AuthorizeView>
 
 
