--- a/BLAZAMGui/UI/Dashboard/Widgets/ChangedPasswordsWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/ChangedPasswordsWidget.razor
@@ -19,9 +19,9 @@
     <Columns>
         <TemplateColumn Title="Name">
             <CellTemplate>
-                <MudTooltip Text="@context.Item?.OU.ToPrettyOu()">
+                <AppTooltip Text="@context.Item?.OU.ToPrettyOu()">
                     <MudText>@context.Item?.CanonicalName</MudText>
-                </MudTooltip>
+                </AppTooltip>
             </CellTemplate>
         </TemplateColumn>
         <TemplateColumn Title="Password Changed">
