--- a/BLAZAMGui/UI/Dashboard/Widgets/LockedOutUsers.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/LockedOutUsers.razor
@@ -22,9 +22,9 @@
 
                     <ChildContent>
 
-                        <MudTooltip Text="@context.Item?.OU.ToPrettyOu()">
+                        <AppTooltip Text="@context.Item?.OU.ToPrettyOu()">
                             <MudText>@context.Item?.CanonicalName</MudText>
-                        </MudTooltip>
+                        </AppTooltip>
 
                     </ChildContent>
                     <MenuContents>
