--- a/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
+++ b/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
@@ -13,12 +13,12 @@
 
     <MudTextField Immediate=true Validation="@(newPasswordConfirm.Equals(newPassword))" Label="@AppLocalization["Confirm New Password"]" InputType="InputType.Password" @bind-Value="@newPasswordConfirm" />
 
-    <MudTooltip Text=@AppLocalization["Require the user to change their password at next logon"]>
+    <AppTooltip Text=@AppLocalization["Require the user to change their password at next logon"]>
         <MudSwitch T="bool"
                    UncheckedColor="Color.Error"
                    Color="Color.Success"
                    @ref=requireChangeSwitch>@AppLocalization["Require change"]</MudSwitch>
-    </MudTooltip>
+    </AppTooltip>
 
 </MudContainer>
 @code {
