--- a/BLAZAM/Pages/Configure/Templates.razor
+++ b/BLAZAM/Pages/Configure/Templates.razor
@@ -30,7 +30,7 @@
                                         })" />
         @if (createFirstTemplateTooltipVisible)
         {
-            <MudTooltip Color=Color.Error
+            <AppTooltip Color=Color.Error
                         ShowOnHover=@(Templates?.Count() < 1)
                         Arrow=true
                         Visible=@(createFirstTemplateTooltipVisible)
@@ -43,56 +43,56 @@
                                OnClick="@(NewTemplate)"
                                Icon="@Icons.Material.Filled.AddCard" />
 
-            </MudTooltip>
+            </AppTooltip>
         }
         else
         {
-            <MudTooltip Text="@AppLocalization["New template"]">
+            <AppTooltip Text="@AppLocalization["New template"]">
                 <MudIconButton Color=Color.Tertiary
                                Class="align-middle"
                                OnClick="@(NewTemplate)"
                                Icon="@Icons.Material.Filled.AddCard" />
 
-            </MudTooltip>
+            </AppTooltip>
         }
 
         @if (SelectedCategory != null && SelectedCategory != "All")
         {
-            <MudTooltip Text="@AppLocalization["Rename Category"]">
+            <AppTooltip Text="@AppLocalization["Rename Category"]">
                 <MudIconButton OnClick=@(()=>{RenameModal?.ShowAsync();})
                                Color="Color.Tertiary"
                                Class="align-middle"
                                Icon="@Icons.Material.Filled.ChangeCircle" />
-            </MudTooltip>
+            </AppTooltip>
         }
         @if (SelectedTemplate != null)
         {
-            <MudTooltip Text="@AppLocalization["Copy template"]">
+            <AppTooltip Text="@AppLocalization["Copy template"]">
 
                 <MudIconButton OnClick=@(async()=>{await DuplicateTemplate(SelectedTemplate);})
                                Color="Color.Tertiary"
                                Class="align-middle"
                                Icon="@Icons.Material.Filled.FileCopy" />
-            </MudTooltip>
-            <MudTooltip Text="@AppLocalization["Remove template"]">
+            </AppTooltip>
+            <AppTooltip Text="@AppLocalization["Remove template"]">
 
 
                 <MudIconButton Color=Color.Error
                                Class="align-middle"
                                OnClick="DeleteTemplate"
                                Icon="@Icons.Material.Filled.Delete" />
-            </MudTooltip>
+            </AppTooltip>
         }
 
         @if (Templates?.Any(t => t.DeletedAt != null) == true)
         {
-            <MudTooltip Text="@AppLocalization["Restore templates"]">
+            <AppTooltip Text="@AppLocalization["Restore templates"]">
 
                 <MudIconButton OnClick=@(async()=>{RestoreModal?.ShowAsync();})
                                Color="Color.Warning"
                                Class="align-middle"
                                Icon="@Icons.Material.Filled.RestoreFromTrash" />
-            </MudTooltip>
+            </AppTooltip>
         }
         <MudSpacer />
         <AppDocumentationButton Page="/admin/templates" />
